--- a/features/cron.mdx
+++ b/features/cron.mdx
@@ -1,33 +1,34 @@
 ---
-title: Cron Jobs
-description: Create serverless functions that run on specific intervals.
+title: 定时任务
+description: 创建在特定时间间隔运行的无服务器函数 / Create serverless functions that run on specific intervals.
+icon: clock
 ---
 
-By default, next-forge uses Vercel's cron jobs feature to trigger Next.js serverless functions on a schedule. However, you can replace this setup with the background job service of your choosing, such as trigger.dev or BetterStack.
+默认情况下，next-forge 使用 Vercel 的定时任务功能来按计划触发 Next.js 无服务器函数。但是，你可以将此设置替换为你选择的后台任务服务，例如 trigger.dev 或 BetterStack。
 
-## Writing functions
+## 编写函数 / Writing Functions
 
-Next.js serverless functions act as the basis for scheduled jobs. You can write them in any runtime and trigger them using a simple HTTP call.
+Next.js 无服务器函数作为计划任务的基础。你可以在任何运行时中编写它们，并使用简单的 HTTP 调用来触发它们。
 
-To demonstrate, we've created a example endpoint called `keep-alive` that creates, then subsequently deletes, a temporary `page` object in the database. This is a little workaround to prevent databases going to sleep after a period of inactivity. You should probably remove this if you don't need it.
+为了演示，我们创建了一个名为 `keep-alive` 的示例端点，它在数据库中创建一个临时的 `page` 对象，然后随后删除它。这是一个小技巧，可以防止数据库在一段时间不活动后进入休眠状态。如果你不需要这个功能，你应该删除它。
 
-Additionally, while you can add cron jobs to any app, we use the `api` app to keep our background jobs, webhooks and other such tasks isolated from our UI.
+此外，虽然你可以向任何应用添加定时任务，但我们使用 `api` 应用来保持我们的后台任务、webhooks 和其他此类任务与我们的 UI 隔离。
 
-You can add new functions by creating the relevant `route.ts` files in the `apps/api/app/cron` folder. While you can put them anywhere, we use the aptly named `cron` folder to hold our endpoints designed to run as cron jobs. For example:
+你可以通过在 `apps/api/app/cron` 文件夹中创建相关的 `route.ts` 文件来添加新函数。虽然你可以把它们放在任何地方，但我们使用恰当命名的 `cron` 文件夹来存放设计为定时任务运行的端点。例如：
 
 ```ts apps/api/app/cron/[your-function]/route.ts
 import { database } from '@repo/database';
 
 export const POST = async () => {
-  // Do stuff
+  // 执行任务 / Do stuff
 
   return new Response('OK', { status: 200 });
 };
 ```
 
-## Scheduling functions
+## 调度函数 / Scheduling Functions
 
-After you write your serverless function, you can schedule it by amending the `vercel.json` file in the API app. To serve as an example, we've wired up the `keep-alive` job mentioned above to run every 10 minutes.
+在编写完无服务器函数后，你可以通过修改 API 应用中的 `vercel.json` 文件来调度它。作为示例，我们已经将上面提到的 `keep-alive` 任务设置为每 10 分钟运行一次。
 
 ```json apps/api/vercel.json
 {
@@ -40,9 +41,9 @@ After you write your serverless function, you can schedule it by amending the `v
 }
 ```
 
-## Triggering functions manually
+## 手动触发函数 / Triggering Functions Manually
 
-Should you need to trigger a cron job manually, you can either do so in the Vercel dashboard or just hit the endpoint with a standard HTTP request. For example:
+如果你需要手动触发定时任务，你可以在 Vercel 仪表板中执行此操作，或者只需使用标准的 HTTP 请求访问端点。例如：
 
 ```sh Terminal
 curl -X POST http://localhot:3002/cron/keep-alive
