--- a/features/env.mdx
+++ b/features/env.mdx
@@ -1,39 +1,40 @@
 ---
-title: Environment Variables
-description: How to handle environment variables in next-forge
+title: 环境变量
+description: 如何在 next-forge 中处理环境变量 / How to handle environment variables in next-forge
+icon: gear
 ---
 
-next-forge uses [@t3-oss/env-nextjs](https://github.com/t3-oss/t3-env) to handle environment variables in a type-safe way. This provides runtime validation and autocompletion for all environment variables.
+next-forge 使用 [@t3-oss/env-nextjs](https://github.com/t3-oss/t3-env) 以类型安全的方式处理环境变量。这为所有环境变量提供了运行时验证和自动完成功能。
 
-## Overview
+## 概述 / Overview
 
-Environment variables are defined and validated in `packages/env/index.ts`. The file exports an `env` object that contains all validated environment variables, separated into `server` and `client` variables.
+环境变量在 `packages/env/index.ts` 中定义和验证。该文件导出一个 `env` 对象，其中包含所有经过验证的环境变量，分为 `server` 和 `client` 变量。
 
-## Initial setup
+## 初始设置 / Initial Setup
 
-### App Environment Variables
+### 应用环境变量 / App Environment Variables
 
-As part of the initial setup, you will need to fill in the environment variables in each `.env.local` file in each Next.js application, specifically `app`, `web` and `api`.
+作为初始设置的一部分，你需要在每个 Next.js 应用程序的 `.env.local` 文件中填写环境变量，特别是 `app`、`web` 和 `api`。
 
-The initial setup script will copy these `.env.example` files to `.env.local` files, so all you need to do is fill in the variables.
+初始设置脚本会将这些 `.env.example` 文件复制到 `.env.local` 文件，所以你只需要填写变量即可。
 
-Check out the `packages/env/index.ts` file to see the validation rules for each variable.
+查看 `packages/env/index.ts` 文件以了解每个变量的验证规则。
 
 <Tip>
-  For `FLAGS_SECRET`, you can run `node -e "console.log(crypto.randomBytes(32).toString('base64url'))"` or `openssl rand -base64 32` in your terminal to generate a random value.
+  对于 `FLAGS_SECRET`，你可以在终端中运行 `node -e "console.log(crypto.randomBytes(32).toString('base64url'))"` 或 `openssl rand -base64 32` 来生成一个随机值。
 </Tip>
 
-Some environment variables will be added by integrations and other tooling. For example, environment variables prefixed with `SENTRY_` are automatically added to a Vercel project when you add the Sentry integration from the Vercel Marketplace. Additionally, `NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL` is a very handy environment variable that refers to the "production" URL to which this project is deployed on Vercel.
+一些环境变量将由集成和其他工具添加。例如，当你从 Vercel Marketplace 添加 Sentry 集成时，以 `SENTRY_` 为前缀的环境变量会自动添加到 Vercel 项目中。此外，`NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL` 是一个非常有用的环境变量，它指向此项目在 Vercel 上部署的"生产"URL。
 
-### Database Environment Variable
+### 数据库环境变量 / Database Environment Variable
 
-You also need to configure a `.env` file in the `packages/database` directory. This file should be created by the setup script, so just add your `DATABASE_URL` and you should be good to go.
+你还需要在 `packages/database` 目录中配置一个 `.env` 文件。这个文件应该由设置脚本创建，所以只需添加你的 `DATABASE_URL` 就可以了。
 
-## Adding a variable
+## 添加变量 / Adding a Variable
 
-To add a new environment variable, you need to do two things:
+要添加新的环境变量，你需要做两件事：
 
-1. Add the variable to each of the `.env.local` files across the repo
-2. Add the variable to the `server` or `client` object in `packages/env/index.ts`. The variable will be validated using Zod, so you can use any of the Zod validation primitives.
+1. 在整个仓库的每个 `.env.local` 文件中添加变量
+2. 在 `packages/env/index.ts` 中将变量添加到 `server` 或 `client` 对象中。变量将使用 Zod 进行验证，所以你可以使用任何 Zod 验证原语。
 
-I recommend being as specific as possible with your validation. For example, if you know that a vendor secret starts with `sec_`, you should validate it as `z.string().min(1).startsWith('sec_')`. This will not only make your intent clearer to anyone reading your code, but will also help prevent errors at runtime.
+我建议在验证时尽可能具体。例如，如果你知道供应商密钥以 `sec_` 开头，你应该将其验证为 `z.string().min(1).startsWith('sec_')`。这不仅会让你的意图对阅读代码的人更清晰，还能帮助防止运行时错误。
