--- a/database/prisma-postgres.mdx
+++ b/database/prisma-postgres.mdx
@@ -1,5 +1,5 @@
 ---
-title: 切换到 Prisma Postgres
+title: 使用 Prisma Postgres
 description: 如何将数据库提供商从 Neon 切换到 Prisma Postgres
 icon: database
 ---
@@ -28,7 +28,7 @@ import { Authors } from '/snippets/authors.mdx';
 
 以下是如何从 Neon 切换到 [Prisma Postgres](https://www.prisma.io/postgres) 的步骤 — 这是一个零冷启动且拥有慷慨免费层的无服务器数据库。你可以在[这里](https://www.prisma.io/blog/announcing-prisma-postgres-early-access)了解更多关于其实现这一点的架构。
 
-## 1. 创建新的 Prisma Postgres 实例
+## 1. 创建新的 Prisma Postgres 实例 / Create a New Prisma Postgres Instance
 
 首先通过 [Prisma Data Platform](https://console.prisma.io/) 创建一个新的 Prisma Postgres 实例并获取连接字符串。它看起来像这样：
 
@@ -36,7 +36,7 @@ import { Authors } from '/snippets/authors.mdx';
 prisma+postgres://accelerate.prisma-data.net/?api_key=ey....
 ```
 
-## 2. 更新环境变量
+## 2. 更新环境变量 / Update Environment Variables    
 
 更新你的环境变量以使用新的 Prisma Postgres 连接字符串：
 
@@ -44,7 +44,7 @@ prisma+postgres://accelerate.prisma-data.net/?api_key=ey....
 DATABASE_URL="prisma+postgres://accelerate.prisma-data.net/?api_key=ey...."
 ```
 
-## 3. 在 `@repo/database` 中替换所需的依赖项
+## 3. 在 `@repo/database` 中替换所需的依赖项 / Replace Dependencies in `@repo/database`
 
 卸载现有依赖项...
 
@@ -58,7 +58,7 @@ pnpm remove @neondatabase/serverless @prisma/adapter-neon ws @types/ws
 pnpm add @prisma/extension-accelerate
 ```
 
-## 4. 更新数据库连接代码
+## 4. 更新数据库连接代码 / Update Database Connection Code
 
 更新数据库连接代码以使用新的 Prisma Postgres 适配器：
 
@@ -74,7 +74,7 @@ export const database = new PrismaClient().$extends(withAccelerate());
 
 你的项目现在已配置为使用 Prisma Postgres 实例进行迁移和查询。
 
-## 5. 探索缓存和实时数据库事件
+## 5. 探索缓存和实时数据库事件 
 
 请注意，由于与其他 Prisma 产品的一流集成，Prisma Postgres 自带了一些你可能会觉得有用的额外功能：
 
@@ -94,7 +94,7 @@ const pages = await prisma.page.findMany({
 
 在 [Accelerate 文档](https://www.prisma.io/docs/accelerate)中了解更多信息。
 
-### 实时数据库事件
+### 实时数据库事件 / Realtime Database Events
 
 要从数据库流式传输数据库更改事件，你首先需要安装 Pulse 扩展：
 
