--- a/features/blog.mdx
+++ b/features/blog.mdx
@@ -1,28 +1,29 @@
 ---
-title: Blog
-description: Type-safe, intelligent blog content.
+title: 博客
+description: 类型安全、智能的博客内容
+icon: newspaper
 ---
 
-next-forge uses [Content Collections](https://www.content-collections.dev/) to generate type-safe data collections from MDX files. This approach provides a structured way to manage blog posts while maintaining full type safety throughout your application.
+next-forge 使用 [Content Collections](https://www.content-collections.dev/) 从 MDX 文件生成类型安全的数据集合。这种方法提供了一种结构化的方式来管理博客文章，同时在整个应用程序中保持完整的类型安全。
 
-## Creating blog posts
+## 创建博客文章 / Creating Blog Posts
 
-To create a new blog post, add a new MDX file to the `apps/web/content/blog` directory. The file name will be used as the slug for the blog post and the frontmatter will be used to generate the blog post page. For example:
+要创建新的博客文章，请在 `apps/web/content/blog` 目录中添加一个新的 MDX 文件。文件名将用作博客文章的 slug，frontmatter 将用于生成博客文章页面。例如：
 
 ```mdx apps/web/content/blog/my-first-post.mdx
 ---
-title: 'My First Post'
-description: 'This is my first blog post'
+title: '我的第一篇文章'
+description: '这是我的第一篇博客文章'
 date: 2024-10-23
 image: /blog/my-first-post.png
 ---
 ```
 
-The same concept applies to the `legal` collection, which is used to generate the legal policy pages. Also, the `image` field is the path relative to the app's root `public` directory.
+同样的概念也适用于 `legal` 集合，它用于生成法律政策页面。此外，`image` 字段是相对于应用程序根目录 `public` 的路径。
 
-## Creating a collection
+## 创建集合 / Creating a Collection
 
-To create a new collection, you'll need to define it in the `content-collections.ts` file in the web directory. For example, here's how you can define a simple new collection called `docs`:
+要创建新的集合，你需要在 web 目录中的 `content-collections.ts` 文件中定义它。例如，以下是如何定义一个名为 `docs` 的简单新集合：
 
 ```ts apps/web/content-collections.ts {3-7, 10}
 import { defineCollection } from '@content-collections/core';
@@ -38,17 +39,17 @@ export default defineConfig({
 });
 ```
 
-## Custom collection properties
+## 自定义集合属性 / Custom Collection Properties
 
-Collections in next-forge are enhanced with several utilities to improve the reading experience and performance:
+next-forge 中的集合通过几个实用工具得到增强，以改善阅读体验和性能：
 
-### Reading Time
+### 阅读时间 / Reading Time
 
-The `reading-time` package is used to calculate the estimated reading time for each post based on its content. This is added to both blog and legal posts through a transform function. You can then reference it in your components using `page.readingTime`.
+`reading-time` 包用于根据内容计算每篇文章的估计阅读时间。这通过转换函数添加到博客和法律文章中。然后你可以在组件中使用 `page.readingTime` 引用它。
 
-### Low-Quality Image Placeholder (LQIP)
+### 低质量图像占位符 / Low-Quality Image Placeholder (LQIP)
 
-The `sqip` package is used to generate a low-quality image placeholder for each post. This is added to both blog and legal posts through a transform function. You can then use it in your components using `page.imageBlur`, like so:
+`sqip` 包用于为每篇文章生成低质量的图像占位符。这通过转换函数添加到博客和法律文章中。然后你可以在组件中使用 `page.imageBlur` 来使用它，如下所示：
 
 ```tsx blog/[slug]/page.tsx
 <Image
@@ -56,3 +57,5 @@ The `sqip` package is used to generate a low-quality image placeholder for each 
   blurDataURL={page.imageBlur}
   placeholder="blur"
 />
+
+```
